--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div id="ui">
         <div class="title">Code Invaders</div>
         <div class="score">Score: <span id="score">0</span></div>
-        <div class="controls">←/→ or A/D to move • Space to shoot • R to restart</div>
+        <div class="controls">←/→ or A/D to move • Space to shoot • R to restart • M to toggle sound</div>
       </div>
     </div>
     <script src="js/game.js"></script>
