--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="score">Score: <span id="score">0</span></div>
         <div class="controls">←/→ or A/D to move • Space to shoot • R to restart • M to toggle sound</div>
       </div>
+      <div id="powerups-ui"></div>
     </div>
     <script src="js/game.js"></script>
   </body>
